--- a/pom.xml
+++ b/pom.xml
@@ -49,11 +49,11 @@
             <version>4.5.3</version>
         </dependency>
         <!-- Logging with SLF4J & LogBack -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.6.6</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
     <build>
