--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-bot.name=BotSkeletor
+bot.name=PollCreatorBot2
 
 # Uri of our bot (this doesn't matter much)
 won.owner.uri=https://localhost:8443/owner
