--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
             <version>4.5.3</version>
         </dependency>
 
+        <!-- JSON REST API -->
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
